deploy/transmission/deploy.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: transmission
  labels:
    app: transmission
---
apiVersion: v1
kind: Service
metadata:
  name: transmission
  namespace: transmission
  labels:
    app: transmission
spec:
  type: ClusterIP
  selector:
    app: transmission
  ports:
  - name: web
    port: 9091
    protocol: TCP
    targetPort: 9091
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
  name: transmission-ingress
  namespace: transmission
spec:
  rules:
  - host: transmission.example.com
    http:
      paths:
      - backend:
          service:
            name: transmission
            port:
              name: web
        path: /
        pathType: Prefix
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: transmission
  namespace: transmission
spec:
  serviceName: transmission
  replicas: 1
  selector:
    matchLabels:
      app: transmission
  template:
    metadata:
      labels:
        app: transmission
    spec:
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - emptyDir:
          medium: Memory
        name: config-vol
      - configMap:
          defaultMode: 420
          name: settings
        name: settings-vol
      containers:
      - name: transmission-daemon
        image: harbor.example.com/transmission/transmission:3.00-1
        imagePullPolicy: IfNotPresent
        command:
        - transmission-daemon
        - -f
        - --log-debug
        - -g
        - /var/lib/transmission/.config/transmission-daemon
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: false
          runAsUser: 10000
        ports:
        - containerPort: 9091
          name: web
          protocol: TCP
        resources:
          requests:
            cpu: 5m
          limits:
            cpu: 250m
            memory: 512Mi
        volumeMounts:
        - mountPath: /var/lib/transmission
          name: config-vol
        - mountPath: /config
          name: settings-vol
        startupProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 9091
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 9091
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
